@@ -1,9 +1,9 @@
  
 lib_LIBRARIES = libplibssgaux.a
  
-include_HEADERS = ssgAux.h ssgShapes.h
+include_HEADERS = ssgAux.h ssgaShapes.h
  
-libplibssgaux_a_SOURCES = ssgShapes.cxx
+libplibssgaux_a_SOURCES = ssgaShapes.cxx
  
 INCLUDES += -I$(top_srcdir)/src/sg -I$(top_srcdir)/src/ssg
 INCLUDES += -I$(top_srcdir)/src/util                                                                               
