@@ -1,10 +1,10 @@
 
-#ifndef _SSGSHAPES_H_
-#define _SSGSHAPES_H_ 1
+#ifndef _SSGAUX_H_
+#define _SSGAUX_H_ 1
 
 #include "sg.h"
 #include "ssg.h"
-#include "ssgShapes.h"
+#include "ssgaShapes.h"
 
 #endif
 
